# TinyStories

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: compare_models.py  quick_train.py
tests/: test_model.py  test_rl.py
tinystories/: __init__.py  config.py  evaluate.py  generate.py  train.py  train_rl.py
tinystories/data/: __init__.py  generate_stories.py  prepare.py  vocabulary.py
tinystories/model/: __init__.py  attention.py  transformer.py
tinystories/rl/: __init__.py  ppo_trainer.py  reward.py  rollout.py  value.py
